# linked-out

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
browser-use/: pyproject.toml
browser-use/browser_use/agent/: prompts.py  service.py  tests.py
browser-use/browser_use/agent/message_manager/: service.py  views.py
browser-use/browser_use/browser/: browser.py  context.py  views.py
browser-use/browser_use/controller/: service.py  views.py
browser-use/browser_use/dom/history_tree_processor/: service.py
browser-use/browser_use/telemetry/: views.py
browser-use/tests/: test_dropdown.py  test_dropdown_complex.py  test_qwen.py
docs/: index.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: OpenAIKeyForm.tsx
frontend/src/pages/: Home.tsx  Progress.tsx
mimicflow/: README.md
mimicflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mimicflow/agents/linkedin/: linkedin_agent.py  linkedin_agent_cli.py
mimicflow/app/: main.py  progress_manager.py
tests/: test_mimicflow.py
