[project]
name = "mimicflow"
version = "0.1"
description = "Automate your workflow by recording a video"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Prithvi Bale"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "aioconsole>=0.8.1",
    "fastapi>=0.115.6",
    "google-genai>=0.3.0",
    "groq>=0.15.0",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.8",
    "langchain-openai>=0.3.1",
    "mss>=10.0.0",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "pygetwindow>=0.0.9",
    "pyinstrument>=5.0.0",
    "pyobjc-framework-quartz>=10.3.2",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "pytest>=8.3.4",
    "smolagents>=1.1.0",
    "together>=0.2.4",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "yappi>=1.6.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "ruff>=0.8.4",
]

[project.urls]
Homepage = "https://github.com/pritzvi/mimicflow"
Changelog = "https://github.com/pritzvi/mimicflow/releases"
Issues = "https://github.com/pritzvi/mimicflow/issues"
CI = "https://github.com/pritzvi/mimicflow/actions"


[project.optional-dependencies]
test = ["pytest", "mkdocs"]

[tool.setuptools]
packages = ["mimicflow"]  # only include the main package

[tool.ruff]
target-version = "py311"
